# timestyle-python

./: LICENSE  pyproject.toml
tests/: test_timeis.py
timeis/: __init__.py  core.py  main.py
timestyle/: __init__.py  __main__.py  core.py  main.py
